# image_classifier_project

./: .gitignore  COVERAGE.md  README.md  TODO.md  check_pytorch.py  dash_app.py  dash_image_classifier_project.py  image_classifier_project.ipynb  image_classifier_project.py  predict.py  pyproject.toml  requirements.txt  run_server.cmd
.github/: GITHUB.md
classifier/: train.py
data/: DATA.md
my_scripts/: Clean-Up.ps1
src/: config.py
src/classifier/: predict.py  train.py
