[project]
name = "image-classifier-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash-bootstrap-components>=2.0.4",
    "dash>=3.3.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch==2.7.0",
    "torchvision==0.22.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.6",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"